# AirflowProject

./: .flake8  Hướng Dẫn Sử Dụng Nhiều Deploy Key Cho Nhiều Project Git.md  Makefile  README.md  airflow_scheduler.sh  airflow_webserver.sh  create_airflow_dag.sh  create_controller_dag.sh  create_dag.sh  create_deploy_key.sh  create_docker_image.py  create_git_tag.sh  create_hit_project_deploy_key.sh  pyproject.toml  requirements.txt  run_check.sh  run_check_before_commit.sh  set_env_variables.sh
.github/workflows/: project_ci.yaml
airflowproject/: webserver_config.py
airflowproject/configs/: airflow.cfg  conf.py
airflowproject/dags/: controller_dag.py  data_processing.py  extract_feature.py  feature_store.py  recmodel_dag.py
airflowproject/functions/: dag_functions.py  task_failure_callback.py
airflowproject/utils/: job_creator.py  ultis.py
example_config/airflow_scenario/: scenario_1.yaml  scenario_2.yaml  scenario_feature_store.yaml  scenario_full.yaml  scenario_recmodel.yaml
example_config/code_config/: data_processing_code_config.yaml  data_processing_package_config.yaml  extract_feature_code_config.yaml  extract_feature_package_config.yaml
example_config/packgage_config/: data_processing_code_config.yaml  data_processing_package_config.yaml  extract_feature_code_config.yaml  extract_feature_package_config.yaml
util_command_file/: create_airflow_dag.sh  create_controller_dag.sh  create_docker_image.py  create_docker_image_and_docker_compose.py  create_git_project_deploy_key.sh  create_new_dag_family.sh  docker_compose_config.yaml
